# Swin-Wave

./: Pawpularity_Contest_Swin_Transformer.ipynb  README.md  petfinder_pawpularity_eda_fastai_colab.ipynb  pyproject.toml  pyproject.toml.txt
Example_Notebooks/: Swin_Transfomer.ipynb  Vision_Transformer_Tutorial.ipynb  image-classification-with-swin-transformers.ipynb  image_classification_hugging_face.ipynb
Jupyter Notebooks/: Local_Installation_for_timm_(PyTorch_image_models).ipynb  Pawpularity_Contest_Swin_Transformer.ipynb
src/: HydraViT.py.txt
